<resources>
    <string name="app_name">KinjalkumariDhimmarMonikakumari_COMP304Sec004_Lab5_Ex1</string>
    <string name="indian_cuisine">Indian</string>
    <string name="italian_cuisine">Italian</string>
    <string name="middle_east_cuisine">Middle East</string>
    <string name="chinese_cuisine">Chinese</string>
    <string name="japanese_cuisine">Japanese</string>
    <string name="boba_cuisine">Boba</string>
    <string name="mexican_cuisine">Mexican</string>
    <string name="thai_cuisine">Thai</string>
    <string name="restaurant_name">Name: </string>
    <string name="restaurant_rating">Ratings: </string>
    <string name="restaurant_total_ratings">Total\nRatings: </string>
    <string name="restaurant_address">Address: </string>
    <string name="open_now">Open Now:</string>
    <string name="maps">Type</string>
    <string name="map_type">Map Types</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="normal_map">Normal Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="title_activity_restaurant_map_location">RestaurantMapLocationActivity</string>
</resources>