<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RestaurantsListActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                >
                <TextView
                    android:id="@+id/cuisine_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_madurai_medium"
                    android:text="Indian"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    >
                </TextView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/map_btn_layout">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_baseline_map_24">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maps"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        >
                    </TextView>
                </LinearLayout>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/restaurant_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/restaurant_layout_item">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            android:id="@+id/map_options_card"
            android:visibility="visible"
            app:cardElevation="20dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/map_type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold">
                </TextView>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/map_type_radioGroup"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="60dp">
                    <RadioButton android:id="@+id/radio_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/normal_map"
                        android:textAlignment="center"
                        android:onClick="onMapRadioButtonClicked"
                        android:layout_marginBottom="20dp"/>
                    <RadioButton android:id="@+id/radio_satellite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/satellite_map"
                        android:onClick="onMapRadioButtonClicked"
                        android:textAlignment="center"
                        android:layout_marginBottom="20dp"/>
                    <RadioButton android:id="@+id/radio_terrain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terrain_map"
                        android:onClick="onMapRadioButtonClicked"
                        android:textAlignment="center"
                        android:layout_marginBottom="20dp"/>
                    <RadioButton android:id="@+id/radio_hybrid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hybrid_map"
                        android:textAlignment="center"
                        android:onClick="onMapRadioButtonClicked"/>
                </RadioGroup>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <Button
                        android:id="@+id/cancel_map_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/btn_style"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="#382950">
                    </Button>

                    <Button
                        android:id="@+id/save_mapType_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_style"
                        android:text="@string/save"
                        android:textColor="#382950"
                        android:textAllCaps="false">
                    </Button>
                </RelativeLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            android:id="@+id/progress_card"
            android:visibility="gone"
            app:cardElevation="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#000000"
                    android:progressTint="#000000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:textSize="15sp"
                    android:text="Loading...">
                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </FrameLayout>




</LinearLayout>